--- a/src/com/gamestore/interfaces/Relatorio.form
+++ b/src/com/gamestore/interfaces/Relatorio.form
@@ -330,15 +330,11 @@
           <Font name="Calibri Light" size="14" style="0"/>
         </Property>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value=" "/>
-            <StringItem index="1" value="Console"/>
-            <StringItem index="2" value="Jogo"/>
-            <StringItem index="3" value="Acess&#xf3;rio"/>
-          </StringArray>
+          <StringArray count="0"/>
         </Property>
       </Properties>
       <AuxValues>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JComboBox(Categoria.getDescricoes())"/>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
     </Component>
