--- a/src/com/gamestore/interfaces/IncluirProduto.form
+++ b/src/com/gamestore/interfaces/IncluirProduto.form
@@ -275,14 +275,15 @@
               <Font name="Calibri Light" size="14" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="7">
-                <StringItem index="0" value="PC"/>
-                <StringItem index="1" value="Playstation 4"/>
-                <StringItem index="2" value="XBox One"/>
-                <StringItem index="3" value="Playstation 3"/>
-                <StringItem index="4" value="XBox 360"/>
-                <StringItem index="5" value="Wii"/>
-                <StringItem index="6" value="Wii U"/>
+              <StringArray count="8">
+                <StringItem index="0" value=" "/>
+                <StringItem index="1" value="PC"/>
+                <StringItem index="2" value="Playstation 4"/>
+                <StringItem index="3" value="XBox One"/>
+                <StringItem index="4" value="Playstation 3"/>
+                <StringItem index="5" value="XBox 360"/>
+                <StringItem index="6" value="Wii"/>
+                <StringItem index="7" value="Wii U"/>
               </StringArray>
             </Property>
           </Properties>
@@ -312,15 +313,16 @@
               <Font name="Calibri Light" size="14" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="8">
-                <StringItem index="0" value="A&#xe7;&#xe3;o"/>
-                <StringItem index="1" value="Aventura"/>
-                <StringItem index="2" value="Estrat&#xe9;gia"/>
-                <StringItem index="3" value="Esportes"/>
-                <StringItem index="4" value="FPS"/>
-                <StringItem index="5" value="MMO"/>
-                <StringItem index="6" value="Plataforma"/>
-                <StringItem index="7" value="RPG"/>
+              <StringArray count="9">
+                <StringItem index="0" value=" "/>
+                <StringItem index="1" value="A&#xe7;&#xe3;o"/>
+                <StringItem index="2" value="Aventura"/>
+                <StringItem index="3" value="Estrat&#xe9;gia"/>
+                <StringItem index="4" value="Esportes"/>
+                <StringItem index="5" value="FPS"/>
+                <StringItem index="6" value="MMO"/>
+                <StringItem index="7" value="Plataforma"/>
+                <StringItem index="8" value="RPG"/>
               </StringArray>
             </Property>
           </Properties>
@@ -358,14 +360,15 @@
               <Font name="Calibri Light" size="14" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="7">
-                <StringItem index="0" value="LIVRE"/>
-                <StringItem index="1" value="10 ANOS"/>
-                <StringItem index="2" value="12 ANOS"/>
-                <StringItem index="3" value="14 ANOS"/>
-                <StringItem index="4" value="16 ANOS"/>
-                <StringItem index="5" value="18 ANOS"/>
-                <StringItem index="6" value=" "/>
+              <StringArray count="8">
+                <StringItem index="0" value=" "/>
+                <StringItem index="1" value="LIVRE"/>
+                <StringItem index="2" value="10 ANOS"/>
+                <StringItem index="3" value="12 ANOS"/>
+                <StringItem index="4" value="14 ANOS"/>
+                <StringItem index="5" value="16 ANOS"/>
+                <StringItem index="6" value="18 ANOS"/>
+                <StringItem index="7" value=" "/>
               </StringArray>
             </Property>
           </Properties>
@@ -421,6 +424,9 @@
               <StringArray count="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="comboCategoriaActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JComboBox(Categoria.getDescricoes())"/>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
